{{=<% %>=}}

<%license%>

syntax = "proto3";

package <%packageName%>;

option java_multiple_files = true;
option java_outer_classname = "HelloCamelProto";


service CamelHello {
  rpc SayHelloToCamel (CamelHelloRequest) returns (CamelHelloReply) {
  }
}

message CamelHelloRequest {
  string name = 1;
}

message CamelHelloReply {
  string message = 1;
}